envoy/config/grpc.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              config:
                path: "/tmp/envoy.log"
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/opentsdb.OpenTSDBService"
                  headers:
                  - name: content-type
                    value: application/grpc
                route:
                  cluster: OpenTSDBGRPC
              - match:
                  prefix: /
                route:
                  cluster: OpenTSDB

          http_filters:
          - name: envoy.router
            config: {}
          - name: envoy.lua
            config:
              inline_code: |         
                jit.opt.start( 3 )       
                dofile("init.lua")
  clusters:
  - name: OpenTSDBGRPC
    connect_timeout: 0.250s
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    type: EDS
    eds_cluster_config:
      eds_config:
        api_config_source:
          api_type: GRPC
          cluster_names: [xds_cluster]
  - name: OpenTSDB
    connect_timeout: 0.250s
    lb_policy: ROUND_ROBIN
    http_protocol_options: {}
    type: EDS
    eds_cluster_config:
      eds_config:
        api_config_source:
          api_type: GRPC
          cluster_names: [oxds_cluster]


  - name: xds_cluster
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 8053 }}]              

  - name: oxds_cluster
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 8054 }}]              



  # - name: tsdb_service_grpc
  #   connect_timeout: 0.250s
  #   type: static
  #   lb_policy: LEAST_REQUEST
  #   http2_protocol_options: {}
  #   hosts:
  #   - socket_address:
  #       address: 127.0.0.1
  #       port_value: 4249
  #   - socket_address:
  #       address: 127.0.0.1
  #       port_value: 5259
  #   - socket_address:
  #       address: 127.0.0.1
  #       port_value: 6269


admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
